--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                         <div class="col-md-6">
                             <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){
-            window.location='https://google.com';}"></iframe>
+            window.location='#home';}"></iframe>
                             <div class="contact-form">
                                    <div id="success"></div>
                                 <form  action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdGAhsNsBObt9rdxf9Pi9FzaGYXSC1i6Q8xHTg9OsdilaTc2g/formResponse" class="form" method="post" target="hidden_iframe" onsubmit="submitted=true">
