--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>New Elite Security and Facility Services</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Security Agency Web page" name="keywords">
-        <meta content="Security service in India" name="description">
+        <meta content="Security service in India Top and leading Security and Facility services company" name="description">
 
         <!-- Favicon -->
         <link href="img/NEFS ICON.ico" rel="icon">
