--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <!-- Video Start -->
             <div class="video wow fadeIn" data-wow-delay="0.1s">
                 <div class="container">
-                    <button type="button" class="btn-play" data-toggle="modal" data-src="#" data-target="#videoModal">
+                    <button type="button" class="btn-play" data-toggle="modal" data-src="Play.mp4" data-target="#videoModal">
                         <span></span>
                     </button>
                 </div>
@@ -431,7 +431,7 @@
                             </button>        
                             <!-- 16:9 aspect ratio -->
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always" allow="autoplay"></iframe>
+                                <iframe class="embed-responsive-item" src="Play.mp4" id="video"  allowscriptaccess="always" allow="Opening"></iframe>
                             </div>
                         </div>
                     </div>
