--- a/index.html
+++ b/index.html
@@ -930,18 +930,19 @@
         <script src="https://kit.fontawesome.com/49864c56ed.js" crossorigin="anonymous"></script>
 
         <!-- Template Javascript -->
-        <script src="js/main.js"></script>
-        <script type="text/javascript">
-            var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-            (function(){
-            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-            s1.async=true;
-            s1.src='https://embed.tawk.to/62473b7a2abe5b455fc302f0/1fvj40mjg';
-            s1.charset='UTF-8';
-            s1.setAttribute('crossorigin','*');
-            s0.parentNode.insertBefore(s1,s0);
-            })();
-            </script>
+       <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/625a66b17b967b11798afd90/1g0oi2aec';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
             
                 <!--whatsapp-->
                 <div class="fab-container">
